@@ -337,7 +337,7 @@
               </li>
               <li>On newer MAC OS systems (10.15 or higher: Catalina, Big Sur, Monterey, Ventura) you may need to follow the <a href="https://en.wikibooks.org/wiki/SPM/Installation_on_64bit_Mac_OS_(Intel)#macOS_Catalina">SPM12 installation</a> instructions to prevent issues with MEX files.
               </li>
-              <li>Older CAT12 versions can be found <a href="http://dbm.neuro.uni-jena.de/cat12/">here</a>.</li>
+              <li>Older CAT12 versions can be found <a href="http://www.neuro.uni-jena.de/cat12/">here</a>.</li>
             </ul>
 
             <!-- ############################# -->
@@ -3061,15 +3061,15 @@
             <p>The advantage of the standalone version is that no Matlab license is needed. Only the (free) Matlab Runtime R2017b (v93) has to be downloaded. However, there are some limitations (e.g. no parallelization and no interactive help in the GUI version) and the standalone version is mainly intended to run without GUI on Unix systems. Please check the <a href="https://neuro-jena.github.io/enigma-cat12/#standalone">ENIGMA CAT12</a> site fore more information and examples to call CAT12 from shell scripts.</p>
             <p>The MATLAB Compiler Runtime (MCR) enables you to run applications compiled within MATLAB using MATLAB Compiler. MCR does not require a MATLAB license and can be used to run the MATLAB compiled program on computers which do not have MATLAB installed. </p>
             <ul class="actions">
-              <li><a href="http://dbm.neuro.uni-jena.de/cat12/cat12_latest_R2017b_MCR_Mac.zip" class="button">CAT12 Standalone for Mac</a></li>
+              <li><a href="http://www.neuro.uni-jena.de/cat12/cat12_latest_R2017b_MCR_Mac.zip" class="button">CAT12 Standalone for Mac</a></li>
               <li><a href="https://ssd.mathworks.com/supportfiles/downloads/R2017b/deployment_files/R2017b/installers/maci64/MCR_R2017b_maci64_installer.dmg.zip" class="button">MCR for Mac</a></li>
             </ul>
             <ul class="actions">
-              <li><a href="http://dbm.neuro.uni-jena.de/cat12/cat12_latest_R2017b_MCR_Linux.zip" class="button">CAT12 Standalone for Linux</a></li>
+              <li><a href="http://www.neuro.uni-jena.de/cat12/cat12_latest_R2017b_MCR_Linux.zip" class="button">CAT12 Standalone for Linux</a></li>
               <li><a href="https://ssd.mathworks.com/supportfiles/downloads/R2017b/deployment_files/R2017b/installers/glnxa64/MCR_R2017b_glnxa64_installer.zip" class="button">MCR for Linux</a></li>
             </ul>
             <ul class="actions">
-              <li><a href="http://dbm.neuro.uni-jena.de/cat12/cat12_latest_R2017b_MCR_Win.zip" class="button">CAT12 Standalone for Windows</a></li>
+              <li><a href="http://www.neuro.uni-jena.de/cat12/cat12_latest_R2017b_MCR_Win.zip" class="button">CAT12 Standalone for Windows</a></li>
               <li><a href="https://ssd.mathworks.com/supportfiles/downloads/R2017b/deployment_files/R2017b/installers/win64/MCR_R2017b_win64_installer.exe" class="button">MCR for Windows</a></li>
             </ul>
           
@@ -3098,10 +3098,10 @@
             <ul>
               <li>Anonymized IP address (e.g. 192.168.100.xxx) is sent to the SBM server for geolocation and to get number of unique users.</li>
               <li>Information about Matlab version is sent when CAT12 is started using the following Matlab command:
-                </br><i> urlread(sprintf('http://dbm.neuro.uni-jena.de/piwik/piwik.php?idsite=1&rec=1&action_name=%s%s%s','Start','%2F',version('-release')));</i>
+                </br><i> urlread(sprintf('http://www.neuro.uni-jena.de/piwik/piwik.php?idsite=1&rec=1&action_name=%s%s%s','Start','%2F',version('-release')));</i>
               </li>
               <li>Information about CAT12 version and computer platform is sent during preprocessing if any errors occurred using the Matlab command:
-                </br><i> urlread(sprintf('http://dbm.neuro.uni-jena.de/piwik/piwik.php?idsite=1&rec=1&action_name=%s%s%s%s%s%s%s',cat_version,'%2F',computer,'%2F',caterr.message,'%2F',str_err));</i>              
+                </br><i> urlread(sprintf('http://www.neuro.uni-jena.de/piwik/piwik.php?idsite=1&rec=1&action_name=%s%s%s%s%s%s%s',cat_version,'%2F',computer,'%2F',caterr.message,'%2F',str_err));</i>              
               </li>
             </ul>
 
